--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build-gh": "ng build --prod --base-href https://github.com/SzBruzda/gh-pages"
+    "build-gh": "ng build --prod --base-href https://github.com/SzBruzda/gh-pages/"
   },
   "private": true,
   "dependencies": {
